--- a/StripCam/Base.lproj/Main.storyboard
+++ b/StripCam/Base.lproj/Main.storyboard
@@ -1,13 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Image View Controller-->
+        <scene sceneID="Y45-mw-y3W">
+            <objects>
+                <viewController storyboardIdentifier="ImageViewController" id="Uq2-SE-wCp" customClass="ImageViewController" customModule="StripCam" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Mw8-dz-s14"/>
+                        <viewControllerLayoutGuide type="bottom" id="UsX-4p-jiu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YX4-WV-S73">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HUU-Hf-wP9">
+                                <rect key="frame" x="29" y="544" width="44" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="saveClicked:" destination="Uq2-SE-wCp" eventType="touchUpInside" id="mTm-TD-hQ0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXK-dM-RFh">
+                                <rect key="frame" x="511" y="544" width="69" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Discard">
+                                    <color key="titleColor" red="0.82156004579999997" green="0.0" blue="0.016869056859999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="discardClicked:" destination="Uq2-SE-wCp" eventType="touchUpInside" id="KVm-g0-4bc"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hW8-um-p8c">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="524"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rXK-dM-RFh" firstAttribute="top" secondItem="hW8-um-p8c" secondAttribute="bottom" constant="8" id="7l4-Bt-wYn"/>
+                            <constraint firstItem="UsX-4p-jiu" firstAttribute="top" secondItem="rXK-dM-RFh" secondAttribute="bottom" constant="20" id="C2e-pA-20J"/>
+                            <constraint firstItem="rXK-dM-RFh" firstAttribute="trailing" secondItem="YX4-WV-S73" secondAttribute="trailingMargin" id="QhG-yE-rdA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hW8-um-p8c" secondAttribute="trailing" constant="-20" id="TYF-gX-ZMo"/>
+                            <constraint firstItem="rXK-dM-RFh" firstAttribute="trailing" secondItem="YX4-WV-S73" secondAttribute="trailingMargin" id="Us3-QX-e9L"/>
+                            <constraint firstItem="HUU-Hf-wP9" firstAttribute="leading" secondItem="YX4-WV-S73" secondAttribute="leadingMargin" constant="9" id="Wno-Dv-ESz"/>
+                            <constraint firstItem="UsX-4p-jiu" firstAttribute="top" secondItem="HUU-Hf-wP9" secondAttribute="bottom" constant="20" id="b1b-Ib-p5G"/>
+                            <constraint firstItem="rXK-dM-RFh" firstAttribute="top" secondItem="hW8-um-p8c" secondAttribute="bottom" constant="20" id="n8W-FC-vJg"/>
+                            <constraint firstItem="hW8-um-p8c" firstAttribute="leading" secondItem="YX4-WV-S73" secondAttribute="leadingMargin" constant="-20" id="qti-QV-8vT"/>
+                            <constraint firstItem="hW8-um-p8c" firstAttribute="top" secondItem="YX4-WV-S73" secondAttribute="topMargin" id="t9u-oE-pYk"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7l4-Bt-wYn"/>
+                                <exclude reference="QhG-yE-rdA"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="hW8-um-p8c" id="Lb2-BE-HSG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jVf-Zo-988" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="189" y="-501"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StripCam" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +81,59 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQE-wd-3sy">
+                                <rect key="frame" x="275" y="530" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="mEa-dF-HNv"/>
+                                </constraints>
+                                <color key="tintColor" red="0.82156004581151831" green="0.0" blue="0.016869056855857413" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="video"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="UIImageRenderingModeAlwaysTemplate">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="buttonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9V8-ZK-8fp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" alpha="0.59999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAR-3Q-9bT">
+                                <rect key="frame" x="20" y="537" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="7SE-R2-Eoo"/>
+                                    <constraint firstAttribute="width" constant="35" id="waA-Ad-2WW"/>
+                                </constraints>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="lock"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="UIImageRenderingModeAlwaysTemplate">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="lockClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k2S-dn-k25"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UQE-wd-3sy" secondAttribute="bottom" constant="20" id="8A0-HP-ofa"/>
+                            <constraint firstItem="OAR-3Q-9bT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="CmP-1k-Tis"/>
+                            <constraint firstItem="UQE-wd-3sy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jnd-7S-ahF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OAR-3Q-9bT" secondAttribute="bottom" constant="28" id="OnR-ia-FR7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UQE-wd-3sy" secondAttribute="bottom" constant="20" id="pGh-kq-dpC"/>
+                            <constraint firstItem="OAR-3Q-9bT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="vgB-Si-BHY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="262" y="191"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="lock" width="50" height="50"/>
+        <image name="video" width="50" height="50"/>
+    </resources>
 </document>
