Rename from stripcam to garbagecam in anticipation of future garbage

--- a/StripCam/Base.lproj/Main.storyboard
+++ b/StripCam/Base.lproj/Main.storyboard
@@ -70,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="189" y="-501"/>
         </scene>
-        <!--View Controller-->
+        <!--Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StripCam" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CameraViewController" customModule="StripCam" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
