--- a/GarbageCam/Base.lproj/Main.storyboard
+++ b/GarbageCam/Base.lproj/Main.storyboard
@@ -126,6 +126,9 @@
                             <constraint firstItem="OAR-3Q-9bT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="vgB-Si-BHY"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mRecordingButton" destination="UQE-wd-3sy" id="D5m-tY-zJW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
