--- a/GarbageCam/Base.lproj/Main.storyboard
+++ b/GarbageCam/Base.lproj/Main.storyboard
@@ -217,18 +217,6 @@
                             </view>
                             <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vuT-UD-dfB">
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WH3-KS-hOC">
-                                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <attributedString key="attributedText">
-                                            <fragment content="ChunkyPixel">
-                                                <attributes>
-                                                    <color key="NSColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <font key="NSFont" size="21" name="Courier-Bold"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z2g-JU-64h">
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="7F3-Cr-SUz"/>
@@ -240,15 +228,21 @@
                                             <action selector="settingsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NFi-GC-JwQ"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ir-Vi-AiH">
+                                        <frame key="frameInset" minX="8" minY="20" width="192" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="21"/>
+                                        <state key="normal" title="ChunkyPixel"/>
+                                        <connections>
+                                            <action selector="onModeTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k2O-On-wJh"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="WH3-KS-hOC" firstAttribute="leading" secondItem="vuT-UD-dfB" secondAttribute="leading" constant="8" id="7mT-hk-oWA"/>
                                     <constraint firstItem="z2g-JU-64h" firstAttribute="centerY" secondItem="vuT-UD-dfB" secondAttribute="centerY" id="Jpf-cy-Yv1"/>
                                     <constraint firstAttribute="trailing" secondItem="z2g-JU-64h" secondAttribute="trailing" constant="8" id="e4T-fG-vuh"/>
                                     <constraint firstAttribute="height" constant="70" id="lMj-Hh-Wsv"/>
-                                    <constraint firstItem="WH3-KS-hOC" firstAttribute="centerX" secondItem="vuT-UD-dfB" secondAttribute="centerX" id="uHB-IJ-n3k"/>
-                                    <constraint firstItem="WH3-KS-hOC" firstAttribute="centerY" secondItem="vuT-UD-dfB" secondAttribute="centerY" id="uiQ-qe-FD3"/>
                                 </constraints>
                             </view>
                         </subviews>
